# CPPBasics

./: CMakeLists.txt  main.cpp  temp.cpp
header/: Car.h
lib/: Car.cpp
syntax/: pointerTrail.cpp
